--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ TestingEnvironment/gmail-oauth2-tools/
 Assignment 7/.idea/.name
 Assignment 7/.idea/Assignment 7.iml
 Assignment 7/.idea/
+Assignment 2/.idea/.name
